--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,12 @@
-﻿@page "/"
+@page "/"
+@layout HomeLayout
 
-<PageTitle>Index</PageTitle>
+<div class="container-fluid">
+    hello cybersoft
+</div>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+
+
