--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using dotnet03_web_blazor
+@using dotnet03_web_blazor.MyComponent
 @using dotnet03_web_blazor.Shared
