Bai tap o contact va databinding -> car

--- a/MyComponent/Header.razor
+++ b/MyComponent/Header.razor
@@ -38,6 +38,19 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <NavLink class="dropdown-item" href="/data-binding">Data binding</NavLink>
                     <NavLink class="dropdown-item" href="/event-binding">Event binding</NavLink>
+                    <NavLink class="dropdown-item" href="/switch-color">Car</NavLink>
+                    <NavLink class="dropdown-item" href="/twowaybinding">TwoWay binding</NavLink>
+                    <NavLink class="dropdown-item" href="/customercontact">Customer Contact</NavLink>
+                    <NavLink class="dropdown-item" href="/courseregister">Course Register</NavLink>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <NavLink class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">component parameter</NavLink>
+                <div class="dropdown-menu" aria-labelledby="dropdownId">
+                    <NavLink class="dropdown-item" href="/demo-param-children">Demo param children</NavLink>
+                    <NavLink class="dropdown-item" href="/componentparameter">Demo parameter</NavLink>
+
                 </div>
             </li>
         </ul>
