--- a/Shared/DashBoardLayout.razor
+++ b/Shared/DashBoardLayout.razor
@@ -1,22 +1,29 @@
 @inherits LayoutComponentBase
 <div class="d-flex">
-    <div class="w-25 bg-dark text-white min-vh-100">
-        <i class="display-4 fa fa-dice"></i>
-        <ul>
-            <li>
-                <NavLink href="/"> Quản lý A</NavLink>
-            </li>
-            <li>
-                <NavLink href="/"> Quản lý b</NavLink>
-            </li>
-        </ul>
+    @* sidenav *@
+    <div class="bg-warning text-white min-vh-100 p-3 d-flex justify-content-center align-items-center"
+        style="width: 250px; min-width:250px">
+        <nav class="d-flex flex-column align-items-center">
+            <a href="/about">
+                <span class=" mb-4">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" style="width: 100px; height: 100px"
+                    src="https://i.pravatar.cc?u" alt="">
+                </span>
+            </a>
+
+            <nav class="nav flex-column text-center w-100">
+                <NavLink href="/about" class="nav-link text-white " activeClass=" fw-bold">ABOUT</NavLink>
+                <NavLink href="/experience" class="nav-link text-white" activeClass="fw-bold">EXPERIENCE</NavLink>
+                <NavLink href="/education" class="nav-link text-white" activeClass="fw-bold">EDUCATION</NavLink>
+                <NavLink href="/skills" class="nav-link text-white" activeClass="fw-bold">SKILLS</NavLink>
+                <NavLink href="/interests" class="nav-link text-white" activeClass="fw-bold">INTERESTS</NavLink>
+                <NavLink href="/awards" class="nav-link text-white" activeClass="fw-bold">AWARDS</NavLink>
+
+            </nav>
+        </nav>
+
     </div>
-    <div class="w-75">
-        <div class="header bg-dark text-white p-1 text-end">
-            <span class="d-inline-block rounded-circle p-5">
-                Khải
-            </span>
-        </div>
+    <div class="flex-grow-1">
         <div class="container-fluid">
             @Body
         </div>
