bai tap trong contact , databinding -> ...

--- a/MyComponent/Header.razor
+++ b/MyComponent/Header.razor
@@ -50,6 +50,13 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <NavLink class="dropdown-item" href="/demo-param-children">Demo param children</NavLink>
                     <NavLink class="dropdown-item" href="/componentparameter">Demo parameter</NavLink>
+                    <NavLink class="dropdown-item" href="/demo-callback-param">Demo Callback param</NavLink>
+                    <NavLink class="dropdown-item" href="/product-management">Product Management</NavLink>
+                    <NavLink class="dropdown-item" href="/ex-car-store">EXCarStore</NavLink>
+
+
+                    <NavLink class="dropdown-item" href="/bt-giohang">BT Gio hang</NavLink>
+
 
                 </div>
             </li>
