--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -1,13 +1,16 @@
 @page "/about"
 @layout DashBoardLayout
-<div class="container-fluid p-0">
-    <section>
-        <div class="p-2 ">
+<div class="container-fluid p-0 d-flex justify-content-center align-items-center min-vh-100">
+    <div class="">
+        <div class="p-5 ">
+
             <h1>CLARENCE
                 <span class="text-warning">TAYLOR</span>
             </h1>
+
+
             <div class=" text-uppercase mb-5">
-                <h3>3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                <h3 class="fs-6">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                     <a class="text-warning" href="name@email.com">name@email.com</a>
                 </h3>
             </div>
@@ -16,13 +19,14 @@
                 overviews.
                 Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
                 proposition.</p>
-            <div class="social-icon">
-                <button><i class="fab fa-facebook"></i></button>
-                <a href=""><i class="fab fa-facebook-square"></i></a>
-                <a href=""></a>
-                <a href=""></a>
+            <div class="social-icon gap-3 d-flex align-items-center">
+                <a href="#" class="social-icon rounded-circle d-flex  bg-dark p-3 text-white"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="social-icon rounded-circle d-flex align-items-center justify-content-center bg-dark p-3 text-white"><i class="fab fa-github"></i></a>
+                <a href="#" class="social-icon rounded-circle d-flex align-items-center bg-dark p-3 text-white"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon rounded-circle d-flex justify-content-center bg-dark p-3 text-white"><i class="fab fa-facebook"></i></a>
+
             </div>
         </div>
-    </section>
+    </div>
 
 </div>
