--- a/Pages/Experience.razor
+++ b/Pages/Experience.razor
@@ -1,7 +1,64 @@
 @page "/experience"
 @layout DashBoardLayout
 <div class="container-fluid">
-    <div class="min-vh-100">
-        helo
-    </div>
+    <section class="p-3">
+        <h1 class="mb-5 fw-bold">EXPERIENCE</h1>
+        <div class="row  mb-4">
+            <div class="col-9">
+                <h2 class=" fw-bold fs-4 text-uppercase mb-2">Senior Web Developer</h2>
+                <h3 class="text-secondary fs-5 text-uppercase mb-3">Intelitec Solutions</h3>
+                <p class="mb-3 text-secondary">Bring to the table win-win survival strategies to ensure proactive
+                    domination. At the end of the
+                    day,
+                    going forward, a new normal that has evolved from generation X is on the runway heading towards
+                    a
+                    streamlined cloud solution. User generated content in real-time will have multiple touchpoints
+                    for
+                    offshoring.</p>
+            </div>
+            <div class="col-3 text-end">
+                <span class="text-danger">March 2013 - Present</span>
+            </div>
+        </div>
+
+        <div class="row  mb-4">
+            <div class="col-9">
+                <h2 class="mb-2 fw-bold fs-4 text-uppercase">Web Developer</h2>
+                <h3 class="text-secondary fs-5 text-uppercase">Intelitec Solutions</h3>
+                <p class="mb-3 text-secondary">Capitalize on low hanging fruit to identify a ballpark value added
+                    activity to beta test. Override
+                    the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the
+                    information highway will close the loop on focusing solely on the bottom line.</p>
+            </div>
+            <div class="col-3 text-end text-danger">
+                <span>December 2011 - March 2013</span>
+            </div>
+        </div>
+        <div class="row  mb-4">
+            <div class="col-9">
+                <h2 class="fw-bold fs-4 text-uppercase mb-2">Junior Web Designer</h2>
+                <h3 class="text-secondary fs-5 text-uppercase">Shout! Media Productions</h3>
+                <p class="mb-3 text-secondary">Podcasting operational change management inside of workflows to establish
+                    a framework. Taking
+                    seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball
+                    while performing a deep dive on the start-up mentality to derive convergence on cross-platform
+                    integration.</p>
+            </div>
+            <div class="col-3 text-end text-danger">
+                <span>July 2010 - December 2011</span>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col-9">
+                <h2 class="fw-bold fs-4 text-uppercase mb-2">Web Design Intern</h2>
+                <h3 class="text-secondary fs-5 text-uppercase">Shout! Media Productions</h3>
+                <p class="mb-3 text-secondary">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate
+                    B2C users after installed base benefits. Dramatically visualize customer directed convergence
+                    without revolutionary ROI.</p>
+            </div>
+            <div class="col-3 text-end text-danger">
+                <span>September 2008 - June 2010</span>
+            </div>
+        </div>
+    </section>
 </div>
