--- a/Pages/Interests.razor
+++ b/Pages/Interests.razor
@@ -1,2 +1,22 @@
 @page "/interests"
 @layout DashBoardLayout
+<div class="container d-flex justify-content-center align-items-center min-vh-100 ">
+    <div style="padding-left: 20px;">
+        <h2 class="mb-5 fw-bold">INTERESTS</h2>
+        <div class="col-11">
+            <p class="mb-3 text-secondary ">Apart from being a web developer, I enjoy most of my time being outdoors. In
+                the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I
+                enjoy mountain biking, free climbing, and kayaking.
+            </p>
+            <p class="mb-3 text-secondary ">
+                When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an
+                aspiring
+                chef, and I spend a large amount of my free time exploring the latest technology advancements in the
+                front-end
+                web development world.
+            </p>
+        </div>
+
+    </div>
+
+</div>
