--- a/Pages/Skills.razor
+++ b/Pages/Skills.razor
@@ -1,2 +1,28 @@
 @page "/skills"
 @layout DashBoardLayout
+<div class="container-fluid d-flex align-items-center min-vh-100">
+    <div class="p-5 ">
+        <h1 class="mb-5 fw-bold">SKILLS</h1>
+        <div class="d-flex mb-5">
+            <div class="col-12">
+                <h3 class="text-secondary fs-5 text-uppercase mb-3">Programming Languages & Tools</h3>
+                <p class="mb-3 text-secondary">Computer Science - Web Development Track <br>
+                    GPA: 3.23</p>
+            </div>
+        </div>
+        <div class="col-12">
+            <h3 class="text-secondary fs-5 text-uppercase mb-2">Workflow</h3>
+            <span class="d-flex align-items-center ">
+                <p class="mb-0 text-secondary">&#10003; Mobile-First, Responsive Design</p>
+            </span>
+            <span class="d-flex align-items-center ">
+                <p class="mb-0 text-secondary">&#10003; Cross Browser Testing & Debugging</p>
+            </span>
+            <span class="d-flex align-items-center ">
+                <p class="mb-0 text-secondary">&#10003; Cross Functional Teams</p>
+            </span>
+            <span class="d-flex align-items-center "><p class="mb-0 text-secondary">&#10003; Agile Development & Scrum</p>
+            </span>
+        </div>
+    </div>
+</div>
