--- a/Pages/Awards.razor
+++ b/Pages/Awards.razor
@@ -1,2 +1,20 @@
 @page "/awards"
 @layout DashBoardLayout
+<div class="container min-vh-100 d-flex align-items-center p-5">
+    <div class="d-flex flex-column align-items-start text-start">
+        <h1 class="pb-4 fw-bold text-uppercase">Awards & Certifications</h1>
+        <span class="p-3">
+            <p class="mb-0 text-secondary">🏆 Google Analytics Certified Developer</p>
+            <p class="mb-0 text-secondary">🏆 Mobile Web Specialist - Google Certification</p>
+            <p class="mb-0 text-secondary">🏆 1st Place - University of Colorado Boulder - Emerging Tech Competition
+                2009</p>
+            <p class="mb-0 text-secondary">🏆 1st Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI
+                Design Category)</p>
+            <p class="mb-0 text-secondary">🏆 2nd Place - University of Colorado Boulder - Emerging Tech Competition
+                2008</p>
+            <p class="mb-0 text-secondary">🏆 1st Place - James Buchanan High School - Hackathon 2006</p>
+            <p class="mb-0 text-secondary">🏆 3rd Place - James Buchanan High School - Hackathon 2005</p>
+        </span>
+
+    </div>
+</div>
