--- a/Pages/DataBinding/CourseRegister.razor
+++ b/Pages/DataBinding/CourseRegister.razor
@@ -1,92 +1,94 @@
-@* @page "/courseregister"
+@page "/courseregister"
 
-<EditForm Model="@courseRegister" class="w-50 mx-auto" OnInvalidSubmit="@SubmitButton" OnValidSubmit="@SuccessSubmit" >
+<EditForm Model="@courseRegister" class="w-50 mx-auto" OnInvalidSubmit="@Submit" OnValidSubmit="@ValidSubmit">
     <DataAnnotationsValidator />
-    <ValidationSummary class="alert-danger" />
-    <h3 class="text-center">Course Register Form</h3>
-    <div class="form-group">
-        <label>Full Name *</label>
-        <input type="text" class="form-control" @bind="@courseRegister.FullName">
-        <ValidationMessage For="@(() => courseRegister.FullName)" />
-
+    <h3>Course Register Form</h3>
+    <div class="form-group mb-3">
+        <label for="">Full Name *</label>
+        <input class="form-control" @bind="@courseRegister.FullName" placeholder="Enter your full name">
+        <ValidationMessage For="@(() => courseRegister.FullName)" class="text-danger" />
     </div>
-
-    <div class="form-group">
-        <label>Email *</label>
-        <input type="email" class="form-control" @bind="@courseRegister.Email">
-        <ValidationMessage For="@(() => courseRegister.Email)" />
+    <div class="form-group mb-3">
+        <label for="">Email *</label>
+        <input type="email" class="form-control" @bind="@courseRegister.Email" placeholder="Enter your email">
+        <ValidationMessage For="@(() => courseRegister.Email)" class="text-danger" />
     </div>
-
-    <div class="form-group">
-        <label>Phone Number *</label>
-        <input type="tel" class="form-control" @bind="@courseRegister.PhoneNumber">
-        <ValidationMessage For="@(() => courseRegister.PhoneNumber)" />
+    <div class="form-group mb-3">
+        <label for="">Phone Number *</label>
+        <input type="tel" class="form-control" @bind="@courseRegister.PhoneNumber"
+            placeholder="Enter your phone number">
+        <ValidationMessage For="@(() => courseRegister.PhoneNumber)" class="text-danger" />
     </div>
-
-    <div class="form-group">
-        <label>Select Course *</label>
-        <select class="form-control" @bind="courseRegister.SelectCourse">
-            <option value="C#">C#</option>
-            <option value="Java">Java</option>
-            <option value="Python">Python</option>
-        </select>
-        <ValidationMessage For="@(() => courseRegister.SelectCourse)" />
-    </div>
-
-    <div class="form-group">
-        <label>Study Mode *</label>
-        <div class="form-check">
-            <input id="Offline" name="studyMode" class="form-check-input" type="radio" value="Offline"
-                @bind="courseRegister.StudyMode">
-            <label for="Offline" class="form-check-label">Offline</label>
+    <div class="form-group mb-3">
+        <label for="">Select Course *</label>
+        <div class="position-relative">
+            <select class="form-control" @bind="@courseRegister.SelectCourse">
+            <option value="">Choose.. </option>
+            @foreach (var course in SelectCourse.lstCourse)
+            {
+                <option value="@course">@course</option>
+            }
+            </select>
+            <i class="fa fa-chevron-down position-absolute" style="top: 50%; right: 15px; transform: translateY(-50%); pointer-events: none;"></i>
         </div>
-        <div class="form-check">
-            <input id="Online" name="studyMode" class="form-check-input" type="radio" value="Online"
-                @bind="courseRegister.StudyMode">
-            <label for="Online" class="form-check-label">Online</label>
-        </div>
-        <ValidationMessage For="@(() => courseRegister.StudyMode)" />
+        
+        <ValidationMessage For="@(() => courseRegister.SelectCourse)" class="text-danger" />
     </div>
 
-    <div class="form-group">
-        <label>Preferred Start Date *</label>
-        <input type="date" class="form-control" @bind="courseRegister.StartDay">
-        <ValidationMessage For="@(() => courseRegister.StartDay)" />
+    <div class="form-group mb-3">
+        <label for="">Study Mode *</label>
+        <div>
+            <input class="form-check-input" name="studymode" type="radio" id="online"
+                @bind="@courseRegister.StudyMode" />
+            <label class="form-check-label" for="online">Online</label>
+
+            <input class="form-check-input" name="studymode" type="radio" id="offline"
+                @bind="@courseRegister.StudyMode" />
+            <label class="form-check-label" for="offline">Offline</label>
+        </div>
+
+
+        <ValidationMessage For="@(() => courseRegister.StudyMode)" class="text-danger" />
     </div>
-    <div class="form-group">
-        <label for="">Comments or Notes</label>
-        <textarea type="text" class="form-control" @bind="courseRegister.Comment"></textarea>
-        <ValidationMessage For="@(() => courseRegister.Comment)" />
+
+    <div class="form-group mb-3">
+        <label for="">Start Day *</label>
+        <input class="form-control" type="date" @bind="@courseRegister.StartDay">
+        <ValidationMessage For="@(() => courseRegister.StartDay)" class="text-danger" />
     </div>
-    <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" @bind="@courseRegister.TermsAndConditions" />
-        <label class="form-check-label">I agree to the terms and conditions *</label>
-        <ValidationMessage For="@(() => courseRegister.TermsAndConditions)" class="text text-danger" />
+    <div class="form-group mb-3">
+        <label for="">Comment *</label>
+        <textarea class="form-control" rows="4" @bind="@courseRegister.Comment" placeholder="Enter any additional information"/>
+        <ValidationMessage For="@(() => courseRegister.Comment)" class="text-danger" />
     </div>
-    @if (!string.IsNullOrEmpty(Message))
-    {
-        <div class="alert alert-success mt-3">@Message</div>
-    }
+    <div class="form-group mb-3 d-flex">
+        <input type="checkbox" class="form-check-input" @bind="@courseRegister.TermsAndConditions">
+        <label class="form-check-table">I agree to the tems and conditions * </label>
+        <ValidationMessage For="@(() => courseRegister.TermsAndConditions)" class="text-danger text-end" />
+    </div>
+    <div class="form-group mb-3">
+        <button type="submit" class="btn btn-primary">Register</button>
+        @if(!string.IsNullOrEmpty(Message))
+        {
+            <div class="alert-success">@Message</div>
+        }
+    </div>
 </EditForm>
 
-@code
-{
-    public CourseRegister courseRegister = new CourseRegister();
+@code {
+    public CourseRegisterForm courseRegister = new CourseRegisterForm();
     public string Message;
-
-    // thông báo thiếu dữ liệu nhập
-    public void SubmitButton()
+    public void Submit()
     {
         Console.WriteLine("Form is invalid");
-        string Notifi = JsonSerializer.Serialize(courseRegister);
-        Console.WriteLine(Notifi);
+        string Notify = JsonSerializer.Serialize(courseRegister);
+        Console.WriteLine(Notify);
     }
 
-    // thông báo submit thành công
-    public void SuccessSubmit()
+    public void ValidSubmit()
     {
-        Message = "Form submitted successfully!";
+        Message = "Your message has been successfully submitted";
         Console.WriteLine(JsonSerializer.Serialize(courseRegister));
-
     }
-} *@
+}
+using Microsoft.Extensions.Options;
