--- a/Pages/Education.razor
+++ b/Pages/Education.razor
@@ -1,2 +1,29 @@
 @page "/education"
 @layout DashBoardLayout
+<div class="container-fluid d-flex ter align-items-center min-vh-100">
+    <div class="p-5 ">
+        <h1 class="mb-5 fw-bold">EDUCATION</h1>
+        <div class="d-flex mb-5">
+            <div class="col-12">
+                <h2 class=" fw-bold fs-4 text-uppercase mb-2">University of Colorado Boulder</h2>
+                <h3 class="text-secondary fs-5 text-uppercase mb-3">Bachelor of Science</h3>
+                <p class="mb-3 text-secondary">Computer Science - Web Development Track <br>
+                    GPA: 3.23</p>
+            </div>
+            <div class="col-8 text-end">
+                <span class="text-danger">August 2006 - May 2010</span>
+            </div>
+        </div>
+        <div class="d-flex">
+            <div class="col-12">
+                <h2 class=" fw-bold fs-4 text-uppercase mb-2">James Buchanan High School
+                </h2>
+                <h3 class="text-secondary fs-5 text-uppercase mb-3">Technology Magnet Program</h3>
+                <p class="mb-3 text-secondary">GPA: 3.23</p>
+            </div>
+            <div class="col-8 text-end">
+                <span class="text-danger">August 2002 - May 2006</span>
+            </div>
+        </div>
+    </div>
+</div>
