--- a/_Imports.razor
+++ b/_Imports.razor
@@ -15,6 +15,10 @@
 @using Microsoft.AspNetCore.Components
 @using System.ComponentModel.DataAnnotations
 
+@* @using dotnet03_web_blazor.Models.ViewModels *@
 @using dotnet03_web_blazor.Models.ViewModels
 @* Thêm thư viện chuyển đổi object thành json *@
 @using System.Text.Json
+
+@* Thêm dữ liệu data product *@
+@using dotnet03_web_blazor.Data
