--- a/Pages/DataBinding/CustomerContact.razor
+++ b/Pages/DataBinding/CustomerContact.razor
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         <label for="">Message *</label>
-        <input type="text" class="form-control" @bind="@customerContact.Message">
+        <textarea type="text" class="form-control" @bind="@customerContact.Message">
         <ValidationMessage For="@(() => customerContact.Message)" class="text text-danger" />
     </div>
     <div class="form-group">
