xem readerme de biet them thong tin chi tiet :D

--- a/MyComponent/Header.razor
+++ b/MyComponent/Header.razor
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <NavLink activeClass="bg-warning text-white" class="nav-link" href="/contact">Contact</NavLink>
             </li>
+            <li class="nav-item">
+                <NavLink activeClass="bg-warning text-white" class="nav-link" href="/about">About</NavLink>
+            </li>
             
             <li class="nav-item dropdown">
                 <NavLink
@@ -56,6 +59,20 @@
 
 
                     <NavLink class="dropdown-item" href="/bt-giohang">BT Gio hang</NavLink>
+                    <NavLink class="dropdown-item" href="/wallet">Wallet</NavLink>
+
+
+                </div>
+            </li>
+
+            <li class="nav-item dropdown">
+                <NavLink class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">LifeCycle</NavLink>
+                <div class="dropdown-menu" aria-labelledby="dropdownId">
+                    <NavLink class="dropdown-item" href="/demo-oninit">Demo oninit</NavLink>
+                    <NavLink class="dropdown-item" href="/demo-setparam">Demo set parametter</NavLink>
+                    <NavLink class="dropdown-item" href="/demo-rendering">Demo rendering</NavLink>
+                    <NavLink class="dropdown-item" href="/demo-dispose">Demo dispose</NavLink>
 
 
                 </div>
